k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: graphql-taskservice
  namespace: default
  labels:
    app: graphql-taskservice
spec:
  type: ClusterIP
  selector:
    app: graphql-taskservice
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
